--- a/mywork/views/admin/main.html
+++ b/mywork/views/admin/main.html
@@ -98,8 +98,8 @@
                 <div class="info-box">
                     <span class="info-box-icon" style="background-color:#f39c12 !important;color:white;"><i class="fa fa-users" aria-hidden="true"></i></span>
                     <div class="info-box-content">
-                        <span class="info-box-text">New Members</span>
-                        <span class="info-box-number">{{ .AdminUsers.Nikename}}</span>
+                        <span class="info-box-text">今天留言数:</span>
+                        <span class="info-box-number">{{.reviewCount}}</span>
                     </div>
                 </div>
             </div>
