--- a/mywork/views/common/head.html
+++ b/mywork/views/common/head.html
@@ -6,11 +6,11 @@
                 <img src="/static/static/images/logo-text.png" alt="" class="logo-text">
             </a>
         </h1>
-        <form class="layui-form blog-seach pull-left" action="">
+        <form class="layui-form blog-seach pull-left" action="/" method="get">
             <div class="layui-form-item blog-sewrap">
                 <div class="layui-input-block blog-sebox">
                     <i class="layui-icon layui-icon-search"></i>
-                    <input type="text" name="title" lay-verify="title" autocomplete="off"  class="layui-input">
+                    <input type="text" name="keyword" lay-verify="title" autocomplete="off" value="{{.Keywords}}"  class="layui-input">
                 </div>
             </div>
         </form>
