--- a/mywork/views/error/404.html
+++ b/mywork/views/error/404.html
@@ -13,7 +13,7 @@
 			<div class="container">
 					<div class="contar-wrap">
 						<div style="padding: 150px 0 50px; text-align: center; font-size: 30px; color: #ccc; font-weight: 300;">
-							心姐抛出了个 404
+							<img src="/static/images/404.jpg">
 						</div>
 					</div>
 			</div>
