--- a/mywork/views/admin/common/menu.html
+++ b/mywork/views/admin/common/menu.html
@@ -80,8 +80,27 @@
                 </dl>
             </li>
             <li class="layui-nav-item">
-                <a href="javascript:;" data-url="/views/form.html" data-name="form" kit-loader><i class="fa fa-plug" aria-hidden="true"></i><span> 表单(page)</span></a>
+                <a href="javascript:;">
+                    <i class="fa fa-plug" aria-hidden="false"></i><span> 基础设置</span>
+                </a>
+                <dl class="layui-nav-child">
+                    <dd>
+                        <a href="javascript:;" kit-target data-options="{url:'/admin/baseseting',icon:'&#xe658;',title:'关于本站',id:'104'}">
+                            <i class="layui-icon">&#xe658;</i>
+                            <span> 关于本站</span>
+                        </a>
+                    </dd>
+                    <dd>
+                        <a href="javascript:;" kit-target data-options="{url:'/admin/baseseting',icon:'&#xe658;',title:'设置公告',id:'105'}">
+                            <i class="layui-icon">&#xe658;</i>
+                            <span> 公告</span>
+                        </a>
+                    </dd>
+
+
+                </dl>
             </li>
+
         </ul>
     </div>
 </div>
