--- a/mywork/views/common/article.html
+++ b/mywork/views/common/article.html
@@ -25,14 +25,16 @@
                     {{end}}
                 </div>
                 <div class="comment count">
-                    <a href="details.html#comment">评论</a>
+                    <a href="javascript:void(0);" onclick="tar_href(this);" data-href="/article/info?id={{$val.id}}#commit-page">评论</a>
                     <a href="javascript:void (0);"  data-id="{{$val.id}}" class="like article_click">点赞</a>
                 </div>
             </div>
             {{end}}
         </div>
         <div class="item-btn">
-            <button class="layui-btn layui-btn-normal lay-page-article">下一页</button>
+            {{/*<button class="layui-btn layui-btn-normal lay-page-article">下一页</button>*/}}
+
+            <div id="common-article-page"></div>
         </div>
     </div>
 </div>
