update:优化前端展示样式

--- a/mywork/views/admin/common/menu.html
+++ b/mywork/views/admin/common/menu.html
@@ -91,7 +91,7 @@
                         </a>
                     </dd>
                     <dd>
-                        <a href="javascript:;" kit-target data-options="{url:'/admin/baseseting',icon:'&#xe658;',title:'设置公告',id:'105'}">
+                        <a href="javascript:;" kit-target data-options="{url:'/admin/baseplacard',icon:'&#xe658;',title:'设置公告',id:'105'}">
                             <i class="layui-icon">&#xe658;</i>
                             <span> 公告</span>
                         </a>
