--- a/mywork/views/common/head.html
+++ b/mywork/views/common/head.html
@@ -42,9 +42,9 @@
                 <li class="layui-nav-item {{if equrl .Path "/time"}}layui-this{{end}}"><a href="/time">时间线</a></li>
                 <li class="layui-nav-item {{if equrl .Path "/about"}}layui-this{{end}}"><a href="/about">关于</a></li>
             </ul>
-            <a href="#" class="personal pull-left" title="登录">
+            {{/*<a href="#" class="personal pull-left" title="登录">
                 <i class="layui-icon layui-icon-username"></i>
-            </a>
+            </a>*/}}
         </div>
         <div class="mobile-nav pull-right" id="mobile-nav">
             <a href="javascript:;">
