--- a/mywork/static/static/css/mian.css
+++ b/mywork/static/static/css/mian.css
@@ -50,7 +50,7 @@ body{
 	height: 100px;
 	margin-bottom: -100px;
 	line-height:100px;
-	background: #1e9fff;
+	background: #232323;
 }
 .lay-blog .logo-img{
 	height:65px;
@@ -243,7 +243,7 @@ body{
 .lay-blog .container-message .title{overflow:hidden;margin-bottom:10px;}
 .lay-blog .container-message .title .name{float: left; display: block; line-height: 38px; color:#787878;}
 .info-intr{line-height: 24px;}
-.lay-blog .container-message .title .info-img{float: right;font-size;color:#4b5a75;}
+.lay-blog .container-message .title .info-img{float: right;color:#4b5a75;}
 .lay-blog .container-message .title .info-img i{font-size: 24px;padding-right: 5px;position: relative;top: 4px;} 
 .lay-blog .container-message .paging{text-align:center;padding-top:30px;}
 /* end message*/
