--- a/mywork/views/admin/common/head.html
+++ b/mywork/views/admin/common/head.html
@@ -4,15 +4,15 @@
     <ul class="layui-nav layui-layout-left kit-nav">
         <li class="layui-nav-item"><a href="javascript:;" >文章管理</a></li>
         <li class="layui-nav-item"><a href="/" target="_blank">前台首页</a></li>
-        <li class="layui-nav-item"><a href="javascript:;" id="pay"><i class="fa fa-gratipay" aria-hidden="true"></i> 测试图标</a></li>
-        <li class="layui-nav-item">
+
+      {{/*  <li class="layui-nav-item">
             <a href="javascript:;">其它系统</a>
             <dl class="layui-nav-child">
                 <dd><a href="javascript:;">邮件管理</a></dd>
                 <dd><a href="javascript:;">消息管理</a></dd>
                 <dd><a href="javascript:;">授权管理</a></dd>
             </dl>
-        </li>
+        </li>*/}}
     </ul>
     <ul class="layui-nav layui-layout-right kit-nav">
         <li class="layui-nav-item">
