--- a/mywork/views/admin/common/menu.html
+++ b/mywork/views/admin/common/menu.html
@@ -96,7 +96,18 @@
                             <span> 公告</span>
                         </a>
                     </dd>
-
+                    <dd>
+                        <a href="javascript:;" kit-target data-options="{url:'/admin/log/index',icon:'&#xe658;',title:'日志详情',id:'106'}">
+                            <i class="layui-icon">&#xe658;</i>
+                            <span> 日志详情</span>
+                        </a>
+                    </dd>
+                    <dd>
+                        <a href="javascript:;" kit-target data-options="{url:'/admin/link/index',icon:'&#xe658;',title:'友情链接',id:'107'}">
+                            <i class="layui-icon">&#xe658;</i>
+                            <span> 友情链接</span>
+                        </a>
+                    </dd>
 
                 </dl>
             </li>
