--- a/mywork/views/admin/main.html
+++ b/mywork/views/admin/main.html
@@ -108,7 +108,7 @@
             <div class="layui-col-md12">
                 <ul class="layui-timeline">
                     {{range $key,$val := .line}}
-                        <li class="layui-timeline-item" id="layui-{{$val.id}}">
+                        <li class="layui-timeline-item" data-id="{{$val.id}}" id="layui-{{$val.id}}">
                         <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                         <div class="layui-timeline-content layui-text">
                             <h3 class="layui-timeline-title">{{$val.code}}</h3>
@@ -133,6 +133,14 @@
                     {{end}}
 
                 </ul>
+
+            {{if gt .count 10}}
+                <div class="item-btn">
+                    <button class="layui-btn layui-btn-normal layui-page-next" data-count="{{.count}}">下一页</button>
+                </div>
+            {{end}}
+
+
             </div>
         </div>
     </div>
@@ -142,6 +150,7 @@
         layui.use(['form', 'layedit', 'laydate'], function() {
             var form = layui.form,
                     layer = layui.layer;
+             var lay = layer;
 
             //删除事件
             $('.tag').click(function () {
@@ -186,6 +195,71 @@
 
             });
 
+
+            /**
+             * 时间线下一页
+             */
+            $('.layui-page-next').click(function (e) {
+                lay.load();
+                //同时禁止再次点击
+                $('.layui-page-next').attr('disabled','disabled');
+
+                //获取最后一个id
+                var id = $('.layui-timeline').children('li:last-child').attr("data-id");
+
+
+                //获取下一页 ajax请求
+
+                $.ajax({
+                    url:'/time/page?id='+id,
+                    type:'get',
+                    dataType:'json',
+                    success:function (response) {
+
+                        if(response.code == '0'){
+
+                            $.each(response.data,function (index,val) {
+
+                                $('.layui-timeline').append(' <li class="layui-timeline-item" data-id="'+val.tid+'">\n' +
+                                        '                            <i class="layui-icon layui-timeline-axis">&#xe63f;</i>\n' +
+                                        '                            <div class="layui-timeline-content layui-text">\n' +
+                                        '                                <h3 class="layui-timeline-title">'+val.code+'</h3>\n' +
+                                      ' <ul>'+
+                                        '<li>删除本条数据:'+
+                                        '<a target="" href="javascript:void(0);" class="tag" data-id="'+val.tid+'" data-token="">'+
+                                        '<i class="layui-icon layui-icon-delete" style="font-size: 30px;"></i>'+
+                                        '</a>'+
+                                        '</li>'+
+                                '<li>修改:'+
+                            '<a target="" href="/admin/timeinfo?id='+val.tid+'&token='+val.token+'" class="edit-tag" data-id="'+val.tid+'" data-token="'+val.token+'">'+
+                                        '<i class="layui-icon layui-icon-edit" style="font-size: 30px;"></i>'+
+
+                                '</a>'+
+                                '</li>'+
+                                '</ul>'+
+                                        '                                <p>\n' +val.content+
+                                        '</p>\n' +
+                                        '</div>\n' +
+                                        '\n' +
+                                        '</li>');
+                            });
+
+                            $('.layui-page-next').removeAttr('disabled');
+                            layer.closeAll('loading');
+
+                        }else{
+
+                            lay.msg('没有数据了，别点了，要哭了*——*');
+                            layer.closeAll('loading');
+                        }
+
+                    },
+                    error:function (err) {
+
+                    }
+                });
+
+            });
 
 
 
