--- a/mywork/views/common/article.html
+++ b/mywork/views/common/article.html
@@ -1,40 +1,46 @@
 <div class="container-wrap">
-    <div class="container">
-        <div class="contar-wrap">
-            <h4 class="item-title">
-                <p><i class="layui-icon layui-icon-speaker"></i>公告：<span>{{html2str .Placard.Content}}</span></p>
-            </h4>
-            {{range $key,$val := .article}}
-            <div class="item layui-article" data-id="{{$val.id}}">
-                <div class="item-box  layer-photos-demo1 layer-photos-demo">
-                    <h3><a href="/article/info?id={{$val.id}}">{{$val.title}}</a></h3>
-                    <h5><i class="layui-icon  ">&#xe637;</i> 时间：<span style="color: #01AAED;">{{$val.created_time}}</span>
-                        <span style="margin-left: 40px;">
-                            <i class="layui-icon ">&#xe66e;</i>
-                            标签：<span style="color: #01AAED;">{{$val.tags.Mnames}}</span>
-                        </span>
-                        <span style="float: right;">
-                            <i class="layui-icon  ">&#xe66f;</i>
-                            作者：<a href="#" style="color: #01AAED;"><span>{{$val.author}}</span></a>
-                        </span>
+    <div class="container layui-row" style="width: 1170px;">
+        <div class="layui-col-md8 layui-col-xs6 layui-col-sm6">
+            <div class="contar-wrap contar-list">
+                <h4 class="item-title">
+                    <p><i class="layui-icon layui-icon-speaker"></i>公告：<span>{{html2str .Placard.Content}}</span></p>
+                </h4>
+                {{range $key,$val := .article}}
+                <div class="item layui-article" data-id="{{$val.id}}">
+                    <div class="item-box  layer-photos-demo1 layer-photos-demo">
+                        <h3><a href="/article/info?id={{$val.id}}">{{$val.title}}</a></h3>
+                        <h5><i class="layui-icon  ">&#xe637;</i> 时间：<span style="color: #01AAED;">{{$val.created_time}}</span>
+                            <span style="margin-left: 40px;">
+                                <i class="layui-icon ">&#xe66e;</i>
+                                标签：<span style="color: #01AAED;">{{$val.tags.Mnames}}</span>
+                            </span>
+                            <span style="float: right;">
+                                <i class="layui-icon  ">&#xe66f;</i>
+                                作者：<a href="#" style="color: #01AAED;"><span>{{$val.author}}</span></a>
+                            </span>
 
-                    </h5>
-                    <p>{{$val.descript}}</p>
-                    {{if $val.img}}
-                    <img src="/{{$val.img}}" alt="mdd.pbtown.com" title="{{$val.title}}" style="width: 200px;height: 130px;cursor: pointer;">
-                    {{end}}
+                        </h5>
+                        <p>{{$val.descript}}</p>
+                        {{if $val.img}}
+                        <img src="/{{$val.img}}" alt="mdd.pbtown.com" title="{{$val.title}}" style="width: 200px;height: 130px;cursor: pointer;">
+                        {{end}}
+                    </div>
+                    <div class="comment count">
+                        <a href="javascript:void(0);" onclick="tar_href(this);" data-href="/article/info?id={{$val.id}}#commit-page">评论</a>
+                        <a href="javascript:void (0);"  data-id="{{$val.id}}" class="like article_click">点赞</a>
+                    </div>
                 </div>
-                <div class="comment count">
-                    <a href="javascript:void(0);" onclick="tar_href(this);" data-href="/article/info?id={{$val.id}}#commit-page">评论</a>
-                    <a href="javascript:void (0);"  data-id="{{$val.id}}" class="like article_click">点赞</a>
-                </div>
+                {{end}}
             </div>
-            {{end}}
-        </div>
-        <div class="item-btn">
+            <div class="item-btn">
             {{/*<button class="layui-btn layui-btn-normal lay-page-article">下一页</button>*/}}
 
-            <div id="common-article-page"></div>
+                <div id="common-article-page"></div>
+            </div>
+
         </div>
+
+       {{template "common/right.html" .}}
+
     </div>
 </div>
