--- a/mywork/views/common/comm.html
+++ b/mywork/views/common/comm.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/static/layui/css/layui.css">
 
 <link rel="stylesheet" href="/static/static/css/mian.css">
+<link rel="stylesheet" href="/static/css/index.css">
 
 
 
