--- a/mywork/views/common/head.html
+++ b/mywork/views/common/head.html
@@ -40,7 +40,7 @@
 
                 <li class="layui-nav-item {{if equrl .Path "/message"}}layui-this{{end}}"><a href="/message">留言</a></li>
                 <li class="layui-nav-item {{if equrl .Path "/time"}}layui-this{{end}}"><a href="/time">时间线</a></li>
-                <li class="layui-nav-item {{if equrl .Path "/about"}}layui-this{{end}}"><a href="/about">关于</a></li>
+               {{/* <li class="layui-nav-item {{if equrl .Path "/about"}}layui-this{{end}}"><a href="/about">关于</a></li>*/}}
             </ul>
             {{/*<a href="#" class="personal pull-left" title="登录">
                 <i class="layui-icon layui-icon-username"></i>
