--- a/mywork/views/error/404.html
+++ b/mywork/views/error/404.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>404 - 闲言轻博客</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="/static/layui/css/layui.css">
-	<link rel="stylesheet" href="/static/static/css/mian.css">
+   {{template "common/comm.html"}}
 </head>
 <body class="lay-blog">
 	{{template "common/head.html" .}}
