--- a/views/admin/excel/index.html
+++ b/views/admin/excel/index.html
@@ -25,7 +25,7 @@
 
 <div style="display: none" id="excel-list">
     <ul class="layui-tab-title">
-        <li class="layui-this" id="sheet">网站设置</li>
+        <li class="layui-e" id="sheet">网站设置</li>
 
     </ul>
 
