--- a/views/admin/login.html
+++ b/views/admin/login.html
@@ -17,8 +17,8 @@
 	<div class="login-top">
 		<h1>登录详情</h1>
 		<form action="/admin/dologin" method="post">
-			<input type="text" name="account" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '账户';}">
-			<input type="password" name="password" value="" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = '密码';}">
+			<input type="text" name="account" value="" onfocus="e.value = '';" onblur="if (e.value == '') {e.value = '账户';}">
+			<input type="password" name="password" value="" onfocus="e.value = '';" onblur="if (e.value == '') {e.value = '密码';}">
 
 	    <div class="forgot">
 	    	<a href="#">忘记密码</a>
