--- a/views/admin/main.html
+++ b/views/admin/main.html
@@ -155,7 +155,7 @@
             //删除事件
             $('.tag').click(function () {
 
-                var self = this;
+                var self = e;
 
                 var tid = $(self).attr('data-id');
 
