--- a/views/admin/article/list.html
+++ b/views/admin/article/list.html
@@ -194,7 +194,7 @@
             //删除本条数据
             $('.del-user').live("click",function () {
 
-                var id =   $(this).attr("data-id");
+                var id =   $(e).attr("data-id");
                 //询问框
                 layer.confirm('确定删除此篇文章？', {
                     btn: ['确定','取消'] //按钮
@@ -233,7 +233,7 @@
              *  处理编辑用户的js
              */
             $('.edit-user').live("click",function () {
-                var id = $(this).attr("data-id");
+                var id = $(e).attr("data-id");
 
                 if(id == ''){
 
