--- a/views/admin/crontab/index.html
+++ b/views/admin/crontab/index.html
@@ -137,7 +137,7 @@
         //删除本条数据
         $('.del-user').live("click",function () {
 
-            var id =   $(this).attr("data-id");
+            var id =   $(e).attr("data-id");
             //询问框
             layer.confirm('确定删除此条留言？', {
                         btn: ['确定','取消'] //按钮
