--- a/views/admin/fiction/index.html
+++ b/views/admin/fiction/index.html
@@ -125,7 +125,7 @@
             //删除本条数据
             $('.del-user').live("click",function () {
 
-                var id =   $(this).attr("data-id");
+                var id =   $(e).attr("data-id");
                 //询问框
                 layer.confirm('确定禁止展示？', {
                     btn: ['确定','取消'] //按钮
@@ -164,7 +164,7 @@
              *  处理编辑用户的js
              */
             $('.edit-user').live("click",function () {
-                var id = $(this).attr("data-id");
+                var id = $(e).attr("data-id");
 
                 if(id == ''){
 
