--- a/views/admin/user/list.html
+++ b/views/admin/user/list.html
@@ -154,7 +154,7 @@
             //删除本条数据
             $('.del-user').live("click",function () {
 
-                var id =   $(this).attr("data-id");
+                var id =   $(e).attr("data-id");
                 //询问框
                 layer.confirm('确定删除该用户？', {
                     btn: ['确定','取消'] //按钮
@@ -193,7 +193,7 @@
              *  处理编辑用户的js
              */
             $('.edit-user').live("click",function () {
-                var id = $(this).attr("data-id");
+                var id = $(e).attr("data-id");
 
                 if(id == ''){
 
