--- a/views/common/article.html
+++ b/views/common/article.html
@@ -26,7 +26,7 @@
                         {{end}}
                     </div>
                     <div class="comment count">
-                        <a href="javascript:void(0);" onclick="tar_href(this);" data-href="/article/info?id={{$val.id}}#commit-page">评论</a>
+                        <a href="javascript:void(0);" onclick="tar_href(e);" data-href="/article/info?id={{$val.id}}#commit-page">评论</a>
                         <a href="javascript:void (0);"  data-id="{{$val.id}}" class="like article_click">点赞</a>
                     </div>
                 </div>
