--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -24,7 +24,7 @@
     var gitment = new Gitment({
         id: '', // 可选。默认为 location.href
         owner: 'biekanwonicheng',
-        repo: 'mywork',
+        repo: 'lite_blog',
         oauth: {
             client_id: '62c6cd2e9f1f4dad2de0',
             client_secret: 'e508f0db74f507b845c68ae017e003480188458e',
